--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
     "@expo/vector-icons": "^14.0.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.45",
     "expo": "^50.0.4",
+    "expo-av": "~13.10.6",
     "expo-constants": "^15.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.73.2",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-screens": "^3.32.0",
     "react-native-web": "^0.19.10"
   },
   "devDependencies": {
@@ -20,7 +25,7 @@
     "@storybook/react-native": "^7.6.14",
     "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
-    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-context": "^4.10.7",
     "typescript": "^5.3.0"
   },
   "scripts": {
